Test/Landin/Knot2.dfy.expect
Knot2.dfy(13,10): Error: To prevent the creation of non-terminating functions, storing functions with read effects into memory is disallowed
Knot2.dfy(14,10): Error: To prevent the creation of non-terminating functions, storing functions with read effects into memory is disallowed
2 resolution/type errors detected in Knot2.dfy
